--- a/huellaProto/huellaProto/Views/CalcularInsti.xaml
+++ b/huellaProto/huellaProto/Views/CalcularInsti.xaml
@@ -13,10 +13,12 @@
                                                                   Property=Width}"
             Source="fondoCielo"
             VerticalOptions="EndAndExpand" />
-      
 
-
-          <FlexLayout BindingContext="{Binding Bienvenida}"  Direction="Column" JustifyContent="SpaceEvenly" AlignItems="Stretch" >
+        <FlexLayout
+            AlignItems="Stretch"
+            BindingContext="{Binding Bienvenida}"
+            Direction="Column"
+            JustifyContent="SpaceEvenly">
             <StackLayout
                 Padding="0,5,0,0"
                 HorizontalOptions="CenterAndExpand"
@@ -36,93 +38,97 @@
                     </Image>
 
                 </StackLayout>
-               <StackLayout Orientation="Vertical" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                <StackLayout
+                    HorizontalOptions="CenterAndExpand"
+                    Orientation="Vertical"
+                    VerticalOptions="CenterAndExpand">
                     <Label HorizontalOptions="CenterAndExpand" Text="Su huella de carbono es: 100 Toneladas" />
                     <Label Text="Esto equivale a 8 hectareas de arboles a plantar" />
                 </StackLayout>
-				<StackLayout>
-					<Picker
-                       x:Name="picker"
-                       Title="Selecciona un árbol"
-                       Margin="80,0,80,0"
-					   FontSize="Small">
-						<Picker.ItemsSource>
-							<x:Array Type="{x:Type x:String}">
-								<x:String>Pino</x:String>
-								<x:String>Acacia</x:String>
-							</x:Array>
-						</Picker.ItemsSource>
-					</Picker>
-					<Picker
-                       x:Name="pickerZona"
-                       Title="Selecciona la zona"
-                       Margin="100,0,100,0"
-					   FontSize="Small">
-						<Picker.ItemsSource>
-							<x:Array Type="{x:Type x:String}">
-								<x:String>Urabá</x:String>
-								<x:String>La Salada</x:String>
-							</x:Array>
-						</Picker.ItemsSource>
-					</Picker>
-					<StackLayout
+                <StackLayout>
+                    <Picker
+                        x:Name="picker"
+                        Title="Selecciona un árbol"
+                        Margin="100,0,100,0"
+                        FontSize="Small"
+                        WidthRequest="150">
+                        <Picker.ItemsSource>
+                            <x:Array Type="{x:Type x:String}">
+                                <x:String>Pino</x:String>
+                                <x:String>Acacia</x:String>
+                            </x:Array>
+                        </Picker.ItemsSource>
+                    </Picker>
+                    <Picker
+                        x:Name="pickerZona"
+                        Title="Selecciona la zona"
+                        Margin="100,0,100,0"
+                        FontSize="Small"
+                        WidthRequest="150">
+                        <Picker.ItemsSource>
+                            <x:Array Type="{x:Type x:String}">
+                                <x:String>Urabá</x:String>
+                                <x:String>La Salada</x:String>
+                            </x:Array>
+                        </Picker.ItemsSource>
+                    </Picker>
+                    <StackLayout
                         Margin="0,5,0,0"
                         Orientation="Vertical"
                         VerticalOptions="CenterAndExpand">
-						<Label
+                        <Label
                             Margin="0"
                             Text="Porcentaje a compensar"
                             XAlign="Center" />
-						<StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-							<Entry Keyboard="Numeric"
-                                  Text="{Binding Gas, Mode=TwoWay}">
-								<Entry.WidthRequest>
-									<OnIdiom
-                                    x:TypeArguments="x:Double"
-                                    Phone="80.0"
-                                    Tablet="140.0" />
-								</Entry.WidthRequest>
-								<Entry.HeightRequest>
-									<OnIdiom
-                                    x:TypeArguments="x:Double"
-                                    Phone="45.0"
-                                    Tablet="35.0" />
-								</Entry.HeightRequest>
-							</Entry>
-						</StackLayout>
-					</StackLayout>
-				</StackLayout>
-				<StackLayout
-                   Margin="0,0,0,10"
-                   HorizontalOptions="CenterAndExpand"
-                   Orientation="Vertical">
-					<Label
-                       Margin="10"
-                       Text="¿Deseas precisar tu calculo de huella?"
-                       XAlign="Center" 
-					HorizontalOptions="CenterAndExpand"/>
-					<StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-						<Label Text="NO" XAlign="Center" />
-						<Switch IsToggled="{Binding EnergiaRenovable, Mode=TwoWay}"></Switch>
-						<Label Text="SI" XAlign="Center" />
-					</StackLayout>
-				</StackLayout>
-				<StackLayout Margin="0">
-					<Button
-                       BackgroundColor="#82a20d"
-                       BorderRadius="23"
-                       Command="{Binding LoginCommand}"
-                       HeightRequest="46"
-                       HorizontalOptions="CenterAndExpand"
-                       IsEnabled="{Binding Isnabled, Mode=TwoWay}"
-                       Text="Compensar"
-                       TextColor="White"
-                       WidthRequest="200" />
-				</StackLayout>
+                        <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+                            <Entry Keyboard="Numeric" Text="{Binding Gas, Mode=TwoWay}">
+                                <Entry.WidthRequest>
+                                    <OnIdiom
+                                        x:TypeArguments="x:Double"
+                                        Phone="80.0"
+                                        Tablet="140.0" />
+                                </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                    <OnIdiom
+                                        x:TypeArguments="x:Double"
+                                        Phone="45.0"
+                                        Tablet="35.0" />
+                                </Entry.HeightRequest>
+                            </Entry>
+                        </StackLayout>
+                    </StackLayout>
+                </StackLayout>
+                <StackLayout
+                    Margin="0,0,0,10"
+                    HorizontalOptions="CenterAndExpand"
+                    Orientation="Vertical">
+                    <Label
+                        Margin="10"
+                        HorizontalOptions="CenterAndExpand"
+                        Text="¿Deseas precisar tu calculo de huella?"
+                        XAlign="Center" />
+                    <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+                        <Label Text="NO" XAlign="Center" />
+                        <Switch IsToggled="{Binding EnergiaRenovable, Mode=TwoWay}" />
+                        <Label Text="SI" XAlign="Center" />
+                    </StackLayout>
+                </StackLayout>
+                <StackLayout Margin="0">
+                    <Button
+                        BackgroundColor="#82a20d"
+                        BorderRadius="23"
+                        Command="{Binding LoginCommand}"
+                        HeightRequest="46"
+                        HorizontalOptions="CenterAndExpand"
+                        IsEnabled="{Binding Isnabled, Mode=TwoWay}"
+                        Text="Compensar"
+                        TextColor="White"
+                        WidthRequest="200" />
+                </StackLayout>
 
 
             </StackLayout>
-          </FlexLayout>
+        </FlexLayout>
 
     </RelativeLayout>
 </ContentPage>
