--- a/huellaProto/huellaProto/Views/MenuPage.xaml
+++ b/huellaProto/huellaProto/Views/MenuPage.xaml
@@ -28,8 +28,7 @@
                 <ListView
                     Margin="10,15,10,15"
                     HasUnevenRows="True"
-                    ItemsSource="{Binding Menus}"
-                   >
+                    ItemsSource="{Binding Menus}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
