--- a/huellaProto/huellaProto/Views/MasterPage.xaml
+++ b/huellaProto/huellaProto/Views/MasterPage.xaml
@@ -11,7 +11,7 @@
     <MasterDetailPage.Detail>
         <NavigationPage x:Name="Navigator">
             <x:Arguments>
-                <pages:CalcularInsti />
+                <pages:CompensarPage />
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
